<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <EditText
        android:id="@+id/edtTxtFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Full Name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtFullName" />

    <EditText
        android:id="@+id/edtTxtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtUser" />

    <EditText
        android:id="@+id/edtTxtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Height(cm)"
        android:ems="10"
        android:hint="@string/height_cm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupGender" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupWeight" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtPass">

        <RadioButton
            android:id="@+id/radioBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/male"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtTxtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Weight(kg)"
        android:ems="10"
        android:hint="@string/weight_kg"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtHeight" />

    <EditText
        android:id="@+id/edtTxtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Age"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtWeight" />

    <RadioGroup
        android:id="@+id/radioGroupWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtAge">

        <RadioButton
            android:id="@+id/radioBtnGain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/gain_weight_7"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBtnLose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose_weight_3"
            android:textSize="16sp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>