<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/white_recommended_btn"
    android:elevation="3dp">

    <TextView
        android:id="@+id/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_space"
        android:textColor="#373B54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addBtn"
        app:layout_constraintEnd_toStartOf="@+id/addBtn"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/picture"
        app:layout_constraintTop_toTopOf="@+id/addBtn" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/pic_popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burger" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_9"
        android:textColor="#373B54"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/picture"
        app:layout_constraintStart_toStartOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/picture" />

    <ImageView
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/addbtn_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/plus_circle" />
</androidx.constraintlayout.widget.ConstraintLayout>