<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@drawable/gradient_background">

    <EditText
        android:id="@+id/edtTxtHeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Height(cm)"
        android:ems="10"
        android:hint="@string/height_cm"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="185dp" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="559dp" />

    <RadioGroup
        android:id="@+id/radioGroupGender2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </RadioGroup>

    <EditText
        android:id="@+id/edtTxtWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Weight(kg)"
        android:ems="10"
        android:hint="@string/weight_kg"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="279dp" />

    <EditText
        android:id="@+id/edtTxtAge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="Age"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="372dp" />

    <RadioGroup
        android:id="@+id/radioGroupWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="472dp">

        <RadioButton
            android:id="@+id/radioBtnGain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="Gain Weight"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioBtnLose2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lose Weight"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/currentGenderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="250dp"
        android:text="Current Gender:"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/currentHeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:text="Current Height:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/currentWeightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:text="Current Weight:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/currentAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:text="Current Age:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="337dp" />

    <TextView
        android:id="@+id/currentGoalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:text="Current Goal:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="434dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="#f6f6f6"
        app:fabCradleMargin="8dp"
        app:fabCradleRoundedCornerRadius="50dp"
        app:fabCradleVerticalOffset="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/homeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageViewHome"
                    android:layout_width="match_parent"
                    android:onClick="openHomePage"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bottom_btn1" />

                <TextView
                    android:id="@+id/textViewHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/bottom_btn2" />

                <TextView
                    android:id="@+id/textViewProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Profile"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/bottom_btn3" />

                <TextView
                    android:id="@+id/textViewSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Support"
                    android:textAlignment="center"
                    android:textColor="#676767"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RadioButton
        android:id="@+id/radioBtnMale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="88dp" />

    <RadioButton
        android:id="@+id/radioBtnFemale2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="88dp" />

</androidx.constraintlayout.widget.ConstraintLayout>